--- a/Segunda Oficina/index.html
+++ b/Segunda Oficina/index.html
@@ -18,6 +18,43 @@
         <img src="imgs/mapa-finlandia.webp" id="img1">
         <p class="centralizar"><b> Mapa da Finlândia em Relação a sua Localização na Europa </b></p>
         <img src="imgs/200px-Finland_in_Europe_(-rivers_-mini_map).svg.png" id="img2">
+        <table>
+            <caption> Cidades Mais Populosas da Finlândia </caption>
+            <td>
+                <tr>
+                    <th> Posições </th>
+                    <th> Cidades </th>
+                    <th> Número de Habitantes </th>
+                </tr>
+            </td>
+            <tbody>
+                <tr>
+                    <td> 1º Lugar </td>
+                    <td> Helsínquia </td>
+                    <td> 558.457 </td>
+                </tr>
+                <tr>
+                    <td> 2º Lugar </td>
+                    <td> Espoo </td>
+                    <td> 292.913</td>
+                </tr>
+                <tr>
+                    <td> 3º Lugar </td>
+                    <td> Tampere </td>
+                    <td> 238.140 </td>
+                </tr>
+                <tr>
+                    <td> 4º Lugar </td>
+                    <td> Vantaa </td>
+                    <td> 233.775 </td>
+                </tr>
+                <tr> 
+                    <td> 5º Lugar </td>
+                    <td> Turku </td>
+                    <td> 179.600</td>
+                </tr>
+            </tbody>
+        </table>
         <nav class="menu">
             <a href="index2.html"> Comidas Típicas </a>
             <a href="index3.html"> Turismo </a>
